# photographers-sorting-script

./: .gitignore  AppUI.ui  Logo.py  PhotoOrganizer.py  Processed.ui  README.txt  myframe.py  pyproject.toml  requirements.txt  script.py
