[tool.poetry]
name = "photographers-sorting-script"
version = "0.1.1"
description = "Allow photographers to sort their pictures by client automatically"
authors = ["Ivo <87941741+Ivolotti89@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "photographers_sorting_script"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
brotli = "1.0.9"
configparser = "5.3.0"
cryptography = "38.0.4"
cython = "0.29.32"
dl = "0.1.0"
docutils = "0.19"
htmlparser = "0.0.2"
importlib-metadata = "5.2.0"
ipaddr = "2.2.0"
keyring = "23.13.1"
lockfile = "0.12.2"
lxml = "4.9.2"
mypy-extensions = "0.4.3"
ordereddict = "1.1"
opencv-python = "^4.7.0.68"
protobuf = "4.21.12"
pyopenssl = "22.1.0"
pyinstaller = "^5.7.0"
pyzbar = "0.1.9"
pyside6 = "^6.4.2"
qrcode = "7.3.1"
typing-extensions = "4.4.0"
zipp = "^3.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
